--- a/client/gcp/templates/static/templates/signup.html
+++ b/client/gcp/templates/static/templates/signup.html
@@ -1,24 +1,24 @@
 <div class="container">
 	<div class="row">
         <div class="col-sm-6">
-        <form action="/signup" method="post" >
-            <div class="form-group">     
+        <form  method="post" ng-submit=postData()>
+            <div class="form-group">
                 <label for="username"><span class="req">* </span> Username: </label>
-                    <input class="form-control" type="text" name="username" id = "un" required /> 
+                    <input class="form-control" type="text" ng-model="form.username" name="username" id = "un" required /> 
             </div>
 
             <div class="form-group">     
                 <label for="password"><span class="req">* </span> Password: </label>
-                    <input class="form-control" type="text" name="password" id = "pswd" required /> 
+                    <input class="form-control" type="text" ng-model="form.password" name="password" id = "pswd" required /> 
             </div>
             <div class="form-group">     
                 <label for="confirm-password"><span class="req">* </span> Confirm Password: </label>
-                    <input class="form-control" type="text" name="confirm passowrd" id = "cpswd" required /> 
+                    <input class="form-control" type="text" ng-model="form.confpassword" name="confirm passowrd" id = "cpswd" required /> 
             </div>
 
             <div class="form-group">     
                 <button type="submit">Submit</button>
-                <a ui-sref="signup()">Signup</a>
+            </div>
         </form>
     </div>
     </div>
