--- a/client/gcp/templates/static/templates/signup.html
+++ b/client/gcp/templates/static/templates/signup.html
@@ -9,11 +9,11 @@
 
             <div class="form-group">     
                 <label for="password"><span class="req">* </span> Password: </label>
-                    <input class="form-control" type="text" ng-model="form.password" name="password" id = "pswd" required /> 
+                    <input class="form-control" type="password" ng-model="form.password" name="password" id = "pswd" required /> 
             </div>
             <div class="form-group">     
                 <label for="confirm-password"><span class="req">* </span> Confirm Password: </label>
-                    <input class="form-control" type="text" ng-model="form.confpassword" name="confirm passowrd" id = "cpswd" required /> 
+                    <input class="form-control" type="password" ng-model="form.confpassword" name="confirm passowrd" id = "cpswd" required /> 
             </div>
 
             <div class="form-group">     
