--- a/client/gcp/templates/static/templates/login.html
+++ b/client/gcp/templates/static/templates/login.html
@@ -1,15 +1,15 @@
 <div class="container">
 	<div class="row">
         <div class="col-sm-6">
-        <form action="/login" method="post" >
+        <form method="post" ng-submit="postData()">
             <div class="form-group">     
                 <label for="username"><span class="req">* </span> Username: </label>
-                    <input class="form-control" type="text" name="username" id = "un" required /> 
+                    <input class="form-control" type="text" ng-model="form.username" name="username" id = "un" required /> 
             </div>
 
             <div class="form-group">     
                 <label for="password"><span class="req">* </span> Password: </label>
-                    <input class="form-control" type="text" name="password" id = "pswd" required /> 
+                    <input class="form-control" type="text" ng-model="form.password" name="password" id = "pswd" required /> 
             </div>
 
             <div class="form-group">     
